--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,10 +21,22 @@
     // }
 	
 	"image": "mcr.microsoft.com/devcontainers/base:ubuntu-24.04",
+	// Add the Docker-in-Docker feature
+	// this allows running Docker commands inside the container
+	"features": {
+		"ghcr.io/devcontainers/features/docker-in-docker:2":{},
+		"ghcr.io/devcontainers/features/python:1": {
+        "version": "3.10" 
+		},
+		"ghcr.io/devcontainers/features/node:1": {
+            "version": "18"
+        }
+	},
+
 	// Lifecycle scripts - run commands during container setup
 	//"postCreateCommand": "cd /workspaces && curl \"https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip\" -o \"awscliv2.zip\" && unzip awscliv2.zip && sudo ./aws/install && cd /workspaces/AWS-CloudCamp",
 	
-	"postCreateCommand": "curl 'https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip' -o 'awscliv2.zip' && unzip awscliv2.zip && sudo ./aws/install && rm -rf aws awscliv2.zip",
+	"postCreateCommand": "rm -rf aws awscliv2.zip && curl 'https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip' -o 'awscliv2.zip' && unzip awscliv2.zip && sudo ./aws/install && rm -rf aws awscliv2.zip",
 
 	// Environment variables
 	"containerEnv": {
